[게시판] 오류수정